module(
    name = "bzlmodrio-revlib",
    version = "2026.0.1",
    compatibility_level = 2026,
)

bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.4")
bazel_dep(name = "rules_java", version = "8.12.0")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2025-1.bcr5")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.12-7.bcr1")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2026.1.1")
bazel_dep(name = "bzlmodrio-opencv", version = "2025.4.10.0-3.bcr3")
bazel_dep(name = "bzlmodrio-ni", version = "2026.1.0")

setup_bzlmodrio_revlib_cpp_dependencies = use_extension("//:maven_cpp_deps.bzl", "setup_bzlmodrio_revlib_cpp_dependencies")
use_repo(
    setup_bzlmodrio_revlib_cpp_dependencies,
    "bazelrio_com_revrobotics_frc_revlib-cpp_headers",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm32",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm32static",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm64",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm64static",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxathena",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxathenastatic",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxx86-64",
    "bazelrio_com_revrobotics_frc_revlib-cpp_linuxx86-64static",
    "bazelrio_com_revrobotics_frc_revlib-cpp_osxuniversal",
    "bazelrio_com_revrobotics_frc_revlib-cpp_osxuniversalstatic",
    "bazelrio_com_revrobotics_frc_revlib-cpp_windowsx86-64",
    "bazelrio_com_revrobotics_frc_revlib-cpp_windowsx86-64static",
    "bazelrio_com_revrobotics_frc_revlib-driver_headers",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxarm32",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxarm32static",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxarm64",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxarm64static",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxathena",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxathenastatic",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64",
    "bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64static",
    "bazelrio_com_revrobotics_frc_revlib-driver_osxuniversal",
    "bazelrio_com_revrobotics_frc_revlib-driver_osxuniversalstatic",
    "bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64",
    "bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64static",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm32",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm32static",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm64",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm64static",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxathena",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxathenastatic",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxx86-64",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxx86-64static",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_osxuniversal",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_osxuniversalstatic",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_windowsx86-64",
    "bazelrio_com_revrobotics_frc_revlibbackenddriver_windowsx86-64static",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxarm32",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxarm32static",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxarm64",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxarm64static",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxathena",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxathenastatic",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxx86-64",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_linuxx86-64static",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_osxuniversal",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_osxuniversalstatic",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_windowsx86-64",
    "bazelrio_com_revrobotics_frc_revlibwpibackenddriver_windowsx86-64static",
)

setup_bzlmodrio_revlib_java_dependencies = use_extension("//:maven_java_deps.bzl", "setup_bzlmodrio_revlib_java_dependencies")
use_repo(
    setup_bzlmodrio_revlib_java_dependencies,
    "com_revrobotics_frc_revlib_java",
)
