module(
    name = "bzlmodrio-revlib-gentool",
)

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "bzlmodrio-gentool", version = "")
bazel_dep(name = "bzlmodrio-allwpilib-gentool", version = "")
bazel_dep(name = "bzlmodrio-opencv-gentool", version = "")
bazel_dep(name = "bzlmodrio-ni-gentool", version = "")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)
use_repo(python, "python_versions")

register_toolchains(
    "@python_versions//:all",
)

local_path_override(
    module_name = "bzlmodrio-gentool",
    path = "../../../gentool",
)

local_path_override(
    module_name = "bzlmodrio-allwpilib-gentool",
    path = "../../bzlmodRio-allwpilib/generate",
)

local_path_override(
    module_name = "bzlmodrio-opencv-gentool",
    path = "../../../wpilibsuite_gen/libraries/bzlmodRio-opencv/generate",
)

local_path_override(
    module_name = "bzlmodrio-ni-gentool",
    path = "../../../wpilibsuite_gen/libraries/bzlmodRio-ni/generate",
)
