cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-cpp_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-cpp_windowsx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:linux_arm64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm64//:shared_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxx86-64//:shared_libs"],
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxathena//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-cpp_osxuniversal//:shared_libs"],
    }),
)

cc_library(
    name = "static",
    linkstatic = 1,
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-cpp_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-cpp_windowsx86-64static//:static_libs"],
        "@rules_bazelrio//conditions:linux_arm64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm64static//:static_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxx86-64static//:static_libs"],
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxathenastatic//:static_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-cpp_osxuniversalstatic//:static_libs"],
    }),
)
