load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "shared",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-cpp_headers//:headers"] + select({
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-cpp_osxuniversal//:shared_libs"],
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-cpp_windowsx86-64//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm32//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm64//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxathena//:shared_libs"],
    }),
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-cpp_headers//:headers"] + select({
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxx86-64static//:static_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-cpp_osxuniversalstatic//:static_libs"],
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-cpp_windowsx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm32static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxarm64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-cpp_linuxathenastatic//:static_libs"],
    }),
)
