cc_library(
    name = "shared",
    linkstatic = 1,
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64//:shared_libs"],
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxathena//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-driver_osxx86-64//:shared_libs"],
    }),
)

cc_library(
    name = "static",
    linkstatic = 1,
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"] + select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64static//:static_libs"],
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64static//:static_libs"],
        "@rules_roborio_toolchain//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxathenastatic//:static_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-driver_osxx86-64static//:static_libs"],
    }),
)
