load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64//:static_libs"],
    }),
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"],
)

cc_library(
    name = "shared",
    srcs = select({
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64//:shared_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-driver_osxuniversal//:shared_libs"],
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm32//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm64//:shared_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxathena//:shared_libs"],
    }),
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = select({
        "@rules_bazelrio//conditions:windows": [":shared_interface"],
        "//conditions:default": [],
    }) + ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"],
    alwayslink = 1,
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_raspi32:raspi32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"] + select({
        "@rules_bazelrio//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64static//:static_libs"],
        "@rules_bazelrio//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-driver_osxuniversalstatic//:static_libs"],
        "@rules_bazelrio//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye32:bullseye32": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm32static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bullseye64:bullseye64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxathenastatic//:static_libs"],
    }),
)
