load("@rules_cc//cc:defs.bzl", "cc_library")

alias(
    name = "header_files",
    actual = "@bazelrio_com_revrobotics_frc_revlib-driver_headers//:header_files",
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
)

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64//:shared_interface"],
    }),
    linkstatic = True,
    tags = ["manual"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"],
)

filegroup(
    name = "shared_raw",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-driver_osxuniversal//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm32//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxsystemcore//:shared"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
)

cc_library(
    name = "shared",
    srcs = [":shared_raw"],
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = [] + select({
        "@rules_bzlmodrio_toolchains//conditions:windows": [":shared_interface"],
        "//conditions:default": [],
    }) + ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"],
    alwayslink = 1,
)

cc_library(
    name = "static",
    linkstatic = 1,
    target_compatible_with = select({
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = ["@bazelrio_com_revrobotics_frc_revlib-driver_headers//:headers"] + select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlib-driver_osxuniversalstatic//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:windows": ["@bazelrio_com_revrobotics_frc_revlib-driver_windowsx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxarm32static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_systemcore:systemcore": ["@bazelrio_com_revrobotics_frc_revlib-driver_linuxsystemcorestatic//:static_libs"],
    }),
)
