load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "shared_interface",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_windowsx86-64//:shared_interface"],
    }),
    linkstatic = True,
    tags = ["manual"],
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
)

filegroup(
    name = "shared_raw",
    srcs = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_osxuniversal//:shared"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_windowsx86-64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm64//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm32//:shared"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxathena//:shared"],
        "//conditions:default": [],
    }),
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
)

cc_library(
    name = "shared",
    srcs = [":shared_raw"],
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = [] + select({
        "@rules_bzlmodrio_toolchains//conditions:windows_arm64": [":shared_interface"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": [":shared_interface"],
        "//conditions:default": [],
    }),
    alwayslink = 1,
)

cc_library(
    name = "static",
    linkstatic = 1,
    visibility = ["@bzlmodrio-revlib//:__subpackages__"],
    deps = select({
        "@rules_bzlmodrio_toolchains//conditions:linux_x86_64": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:osx": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_osxuniversalstatic//:static_libs"],
        "@rules_bzlmodrio_toolchains//conditions:windows_x86_64": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_windowsx86-64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_bookworm64:bookworm64": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm64static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_raspibookworm32:raspibookworm32": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxarm32static//:static_libs"],
        "@rules_bzlmodrio_toolchains//constraints/is_roborio:roborio": ["@bazelrio_com_revrobotics_frc_revlibbackenddriver_linuxathenastatic//:static_libs"],
    }),
)
